Lecturas del 29-Ago-21

--- a/README.org
+++ b/README.org
@@ -24,6 +24,9 @@ contenido.
 
 ** Agosto de 2021
 
+*** 29-Ago-21
++ [[https://katyhristova.medium.com/what-is-category-theory-and-why-is-it-trendy-b94ce59fe42b][What is category theory and why is it trendy?]] ~ Katerina Hristova. #Math #CategoryTheory
+
 *** 28-Ago-21
 + [[https://youtu.be/LwwzVpolxm8][Geometry in Lean, a report for mathematicians]]. ~ Nicolò Cavalleri, Anthony Bordg. #ITP #LeanProver #Math
 + [[https://youtu.be/qac1O4Co0IU][Formalizing the Gromov-Hausdorff space]]. ~ Sébastien Gouëzel. #ITP #LeanProver #Math
