--- a/README.org
+++ b/README.org
@@ -24,6 +24,11 @@ contenido.
 
 ** Septiembre de 2021
 
+*** 06-Sep-21
++ [[https://www.isa-afp.org/entries/Schutz_Spacetime.html][Schutz' independent axioms for Minkowski spacetime (in Isabelle/HOL)]]. Richard Schmoetten, Jake Palmer, Jacques Fleuriot. #ITP #IsabelleHOL #Math
++ [[https://github.com/leanprover-community/mathlib/blob/0a94b29f2296d00526724640d204f9222ec265eb/src/data/nat/choose/vandermonde.lean][Vandermonde's identity (in Lean)]]. ~ Johan Commelin. #ITP #LeanProver #Math
++ [[https://arxiv.org/abs/2109.01483][A survey of the proof-theoretic foundations of logic programming]]. ~ Dale Miller. #LogicProgramming
+
 *** 05-Sep-21
 + [[https://dev.to/viglioni/creating-haskell-notebooks-with-org-mode-4h7][Creating Haskell notebooks with org-mode]]. ~ Laura Viglioni (@LauraViglioni). #Emacs #OrgMode #Haskell #FunctionalProgramming
 + [[https://arxiv.org/abs/2108.13114][Embedded pattern matching]]. ~ Trevor L. McDonell, Joshua D. Meredith, Gabriele Keller. #Haskell #FuncionalProgramming
