--- a/README.org
+++ b/README.org
@@ -24,6 +24,11 @@ contenido.
 
 ** Septiembre de 2021
 
+*** 07-Sep-21
++ [[https://vtss.doc.ic.ac.uk/publications/Watt2021Two.pdf][Two mechanisations of WebAssembly 1]].0. ~ Conrad Watt, Xiaojia Rao, Jean Pichon-Pharabod, Martin Bodin, Philippa Gardner. #ITP #IsabelleHOL #Coq
++ [[https://arxiv.org/abs/2109.01121][A reasoning engine for the gamification of loop-invariant discovery]]. ~ Andrew Walter, Seth Cooper, Panagiotis Manolios. #ATP #ACL2 #Program_verification
++ [[http://cliplab.org/proglog/][Course: Logic Programming (2020-2021)]]. ~ Manuel Hermenegildo et als. #LogicProgramming #Prolog
+
 *** 06-Sep-21
 + [[https://www.isa-afp.org/entries/Schutz_Spacetime.html][Schutz' independent axioms for Minkowski spacetime (in Isabelle/HOL)]]. Richard Schmoetten, Jake Palmer, Jacques Fleuriot. #ITP #IsabelleHOL #Math
 + [[https://github.com/leanprover-community/mathlib/blob/0a94b29f2296d00526724640d204f9222ec265eb/src/data/nat/choose/vandermonde.lean][Vandermonde's identity (in Lean)]]. ~ Johan Commelin. #ITP #LeanProver #Math
